[project]
name = "moda-image-mcp"
version = "0.1.0"
description = "MCP服务器用于魔搭图像生成"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.25.0",
    "Pillow>=8.0.0",
    "asyncio-compat>=0.1.0"
]

[project.scripts]
moda-image-mcp = "moda_image_mcp.server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"